--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/second-challenge/assets/css/style.css">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+  
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Gustavo Moran</h1>
+         <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#work">Work</a>
+                    </li>
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
+                    <li>
+                        <a href="#resume">Resume</a>
+                    </li>
+                </ul>
+        </nav>
+        
+    </header>
 </body>
 </html>
