--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-
     <link rel="stylesheet" href="assets/css/style.css">
-  
 </head>
 <body>
     <header>
@@ -26,8 +24,20 @@
                         <a href="#resume">Resume</a>
                     </li>
                 </ul>
-        </nav>
-        
+        </nav>      
     </header>
+    <figure>
+        <h3>Cool Things I Do</h3>
+    </figure>
+
+    <main>
+    <aside>
+        <h1>About Me</h1>
+    </aside>
+    <section>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ullam eum sed, ut, ipsam dolor itaque recusandae aperiam accusantium consequuntur sequi eos eius, distinctio eaque a! Sed facere illum vero.</p>
+    </section>
+
+    </main>
 </body>
 </html>
