--- a/index.html
+++ b/index.html
@@ -1,76 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <header>
         <h1>Gustavo Moran</h1>
-         <nav>
-                <ul>
-                    <li>
-                        <a href="#about-me">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#work">Work</a>
-                    </li>
-                    <li>
-                        <a href="#contact-me">Contact Me</a>
-                    </li>
-                    <li>
-                        <a href="#resume">Resume</a>
-                    </li>
-                </ul>
-        </nav>      
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-
     <figure id="hero">
-        <h3>Cool Things</h3>
+        <h3>Cool stuff</h3>
     </figure>
 
     <main>
-    <aside>
-        <h id="about-me">About Me</h>
-    </aside>
-    <section>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ullam eum sed, ut, ipsam dolor itaque recusandae aperiam accusantium consequuntur sequi eos eius, distinctio eaque a! Sed facere illum vero.</p>
-    </section>
+        <aside>
+            <h1 id="about-me">About Me</h1>
+        </aside>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae optio eos minima pariatur quod, laborum
+                minus corporis voluptatum eveniet, vitae laboriosam odio autem beatae sunt? Maxime quis dignissimos vero
+                modi!</p>
+        </section>
 
-    <aside>
-        <h1 id="work">Work</h1>
-    </aside>
-    <section>
-        <figure id="big-pic"> <a href="https://gus7770.github.io/first-challenge-code-refactor/"></a> <img src="./images/screenshot of my work.jpg" alt="my work">
-        </figure>
-        <figure id="small-pics">
-            <section><img src="https://placehold.co/800" alt="">
-            </section>
-            <section><img src="https://placehold.co/800" alt="">
-            </section>
-            <section><img src="https://placehold.co/800" alt="">
-            </section>
-            <section><img src="https://placehold.co/800" alt="">
-            </section>
-            
-           
-        </figure>
-    </section>
+        <aside>
+            <h1 id="work">Work</h1>
+        </aside>
+        <section>
+            <figure id="big-pic"> <a href="https://placehold.co/400"><img src="./assets/images/screen.png" alt=""></a> </figure>
+            <figure id="small-pics">
+                <section>
+                    <img src="https://placehold.co/800" alt="">
+                </section>
+
+                <section>
+                    <img src="https://placehold.co/800" alt="">
+                </section>
+
+                <section>
+                    <img src="https://placehold.co/800" alt="">
+                </section>
+
+                <section>
+                    <img src="https://placehold.co/800" alt="">
+                </section>
+
+
+            </figure>
+
+        </section>
+
     </main>
 
     <footer>
-        <aside>
-            <h1 id="contact-me">Contact Me</h1>
-        </aside>
-        <section>
-            <ul>
-                <li><a href="#">111-111"></a></li>
-                <li><a href="mailto:gus7770@me.com"> gus7770@me.com</a></li>
-                <li><a href="https://github.com/gus7770"> GitHub</a></li>
-            </ul>
-        </section>
+      <aside>
+        <h1 id="contact-me">Contact Me</h1>
+      </aside>
+      <section>
+        <ul>
+            <li> <a href="#">111-111-1111</a></li>
+            <li> <a href="mailto:ploy@yahoo.com">gus777@me.com</a></li>
+            <li> <a href="https://placehold.co/400">Github</a></li>
+            <li> <a href="https://placehold.co/400">LinkedIn</a></li>
+        </ul>
+      </section>
     </footer>
 </body>
+
 </html>
