moved images around

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </header>
     <figure id="hero">
         <h3>Cool stuff</h3>
+        <img src="./images/main-work.jpg" alt="">
     </figure>
 
     <main>
@@ -49,19 +50,19 @@
             <figure id="big-pic"> <a href="https://placehold.co/400"><img src="./assets/images/screen.png" alt=""></a> </figure>
             <figure id="small-pics">
                 <section>
-                    <img src="https://placehold.co/800" alt="">
+                    <img src="./images/evren-carbon-fiber-hexagon-blue-light-3d-textures-pbr-material-high-resolution-free-downlox-4k-for-unreal-unity-and-vray-5.jpg" alt="blue hexagons">
                 </section>
 
                 <section>
-                    <img src="https://placehold.co/800" alt="">
+                    <img src="./images/HD-wallpaper-rainbow-abstract-apple-high-definition-high-quality-rainbow.jpg" alt="rainbow hues">
                 </section>
 
                 <section>
-                    <img src="https://placehold.co/800" alt="">
+                    <img src="./images/8f70b690a89019772e67d9003689e1ad.jpg" alt="red stacked rocks">
                 </section>
 
                 <section>
-                    <img src="https://placehold.co/800" alt="">
+                    <img src="./images/white-marble-wall-textures-free-download-bpr-material-full-preview.jpg.webp" alt="white marble wall">
                 </section>
 
 
