made changes to html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         </nav>
     </header>
     <figure id="hero">
-        <h3>Cool stuff</h3>
+        <a href="https://gus7770.github.io/first-challenge-code-refactor/">
         <img src="./images/main-work.jpg" alt="">
+        </a>
     </figure>
 
     <main>
