made changes to links

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <ul>
             <li> <a href="#">111-111-1111</a></li>
             <li> <a href="mailto:ploy@yahoo.com">gus777@me.com</a></li>
-            <li> <a href="https://placehold.co/400">Github</a></li>
-            <li> <a href="https://placehold.co/400">LinkedIn</a></li>
+            <li> <a href="https://github.com/gus7770">Github</a></li>
+            <li> <a href="https://www.linkedin.com/in/gustavo-mor%C3%A1n-9887b2254/">LinkedIn</a></li>
         </ul>
       </section>
     </footer>
