--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="https://github.com/gus7770">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -39,16 +39,14 @@
             <h1 id="about-me">About Me</h1>
         </aside>
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae optio eos minima pariatur quod, laborum
-                minus corporis voluptatum eveniet, vitae laboriosam odio autem beatae sunt? Maxime quis dignissimos vero
-                modi!</p>
+            <p>I was born in Maracaibo, Venezuela. I moved to Miami, FL in 1996. I went to college at the SFC and UF in Gainesville. I have enjoyed working in different dynamic sales environment for the last 8 years. However, I am very excited and eager to learn new skills in software development. My goal is to build new technologies and software for small businesses and enterprises. I also want to use technology to build better ways of living and connecting with others in this modern world. I want to build a solution/app that helps people connect in a more meaningful and fulfilling way. Ironically this does rely on technology. My hope is that in the future, we can still connect with loved ones in ways that are impactful and safe. And I want to bring this solution to enterprises and monetize it.</p>
         </section>
 
         <aside>
             <h1 id="work">Work</h1>
         </aside>
         <section>
-            <figure id="big-pic"> <a href="https://placehold.co/400"><img src="./assets/images/screen.png" alt=""></a> </figure>
+            <figure id="big-pic"> <a href=><img src="./assets/images/screen.png" alt=""></a> </figure>
             <figure id="small-pics">
                 <section>
                     <img src="./images/evren-carbon-fiber-hexagon-blue-light-3d-textures-pbr-material-high-resolution-free-downlox-4k-for-unreal-unity-and-vray-5.jpg" alt="blue hexagons">
